package techcrashcourse.observer;

public interface Observer {
	public void update(int xCordinate, int yCordinate);
}
